# anaconda-workshop

./: .gitignore  README.md  pyproject.toml
src/: constants.py  database.py  dispatcher.py  ingestion.py  main.py  services.py  setup.py  sql_templates.py  utils.py
src/resources/: README.md
tests/: test_database.py  test_extract_fund_and_date.py  test_generate_values_for_insertion_from_df.py  test_get_best_ror.py  test_ingest.py  test_ingestion.py  test_services.py  test_sql_templates.py  test_standarize_datetime.py
tests/utils/: mock_data.py  setup_tests.py
