[tool.poetry]
name = "anaconda-workshop"
version = "0.1.0"
description = "For Anaconda review"
authors = ["Ang Kai Chao <angkaichao@gic.com.sg>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"
pytest = "^8.3.5"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["F401", "I001", "W292"]

# --------------------------
# Pytest Configuration
# --------------------------
[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

